# botmanager

./: .gitignore  README.md
core/: admin_bot.c  console.c  main.c
include/: console.h
plugins/: meson.build
plugins/bot/score_pump_v3/: meson.build  score_pump_v3.c  score_pump_v3.h  score_pump_v3_score.c
plugins/service/binance/: README.md  bar_cache.c  binance.c  binance.h  market_data_dispatch.c  meson.build  subscriptions.c  trading.c  trading_sign.c  ws_backoff.c  ws_market_data.c
tests/: meson.build
tests/plugins/: meson.build
tests/plugins/bot/: meson.build
tests/plugins/bot/score_pump_v3/: meson.build  test_scoring.c
tests/plugins/service/: meson.build
tests/plugins/service/binance/: meson.build  test_bar_cache.c  test_market_data_dispatch.c  test_subscriptions.c  test_trading.c  test_ws_backoff.c  test_ws_market_data.c
